--- a/public/templates/book/css/style.css
+++ b/public/templates/book/css/style.css
@@ -1,12 +1,12 @@
 @font-face {
-    font-family: my-font-book-r;
-    src: url(../fonts/SF-Pro-Display-Regular.otf);
+    font-family: my-font-book;
+    src: url(../fonts/Montserrat-Light.woff);
 }
 @font-face {
     font-family: my-font-book-b;
     src: url(../fonts/SF-Pro-Display-Bold.otf);
 }
-.menu-item-has-children a{
+#tg-navigation a{
     font-family: 'Open Sans', Arial, Helvetica, sans-serif !important;
     font-weight: 600;
 }
