--- a/public/templates/book/css/main.css
+++ b/public/templates/book/css/main.css
@@ -872,7 +872,7 @@ body.tg-comingsoonpage .tg-wrapper{overflow:visible;}
 	z-index: 2;
 	width: 100%;
 	float: left;
-	padding: 30px 0;
+	padding: 20px 0;
 	position: relative;
 }
 .tg-logo {
@@ -1710,6 +1710,7 @@ li.menu-item-has-mega-menu { position: static; }
 	float: left;
 	position: relative;
 }
+/* 
 .tg-frontcover:before{
 	top: 0;
 	left: 0;
@@ -1734,7 +1735,7 @@ li.menu-item-has-mega-menu { position: static; }
 		rgba(0,0,0,0.1) 5%,
 		rgba(0,0,0,0) 13%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#00000000',GradientType=1 );
-}
+}*/
 .tg-backcover {
 	top: 2%;
 	left: 0;
@@ -2887,7 +2888,7 @@ li.menu-item-has-mega-menu { position: static; }
 			Inner Banner Style					
 ============================================= */
 .tg-innerbanner{
-	height:300px;
+	height:180px;
 	text-align:center;
 	-webkit-box-align: center;
 	-ms-flex-align: center;
@@ -3517,7 +3518,7 @@ blockquote .tg-bookwriter{
 	padding: 0 32px 0 62px;
 	background: transparent;
 }
-.tg-formsortshoitems fieldset .form-group:first-child .tg-select select{padding: 0 32px 0 72px;}
+.tg-formsortshoitems fieldset .form-group:first-child .tg-select select{padding: 0 30px 0 20px;}
 .tg-productgrid .tg-postbook .tg-postbookcontent .tg-btn{
 	width:auto;
 	margin:20px auto 0;
