--- a/public/templates/book/css/color-purple.css
+++ b/public/templates/book/css/color-purple.css
@@ -35,7 +35,7 @@ a:active,
 .tg-quantityholder .plus:hover,
 .tg-themetabs li a:before,
 .tg-tag:hover,
-.tg-btnreply:hover{background:#b22565;}
+.tg-btnreply:hover{background:#6BA136;}
 /*=============================================
 			Theme Border Color
 =============================================*/
@@ -56,7 +56,7 @@ input:focus,
 .tg-tag:hover,
 .tg-comments li .tg-authorbox:hover,
 .tg-comments li .tg-authorbox:hover .tg-bottomarrow,
-.tg-btnreply:hover{ border-color: #b22565;}
+.tg-btnreply:hover{ border-color: #6BA136;}
 /*=============================================
 			Theme Shadow Color
 =============================================*/
