--- a/public/templates/book/css/style.css
+++ b/public/templates/book/css/style.css
@@ -6,22 +6,29 @@
     font-family: my-font-book-b;
     src: url(../fonts/SF-Pro-Display-Bold.otf);
 }
+.display-block{
+    display: block !important;
+}
 #tg-navigation a{
     font-family: 'Open Sans', Arial, Helvetica, sans-serif !important;
     font-weight: 600;
 }
 .tg-homeslider .item{
     height: 508px;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 div#tg-homeslider {
     margin-top: 15px;
 }
 .owl-prev.tg-btnround.tg-btnprev.slide-ba {
-    top: 0;
+    position: absolute;
+    top: 40%;
 }
 
 .owl-next.tg-btnround.tg-btnnext.slide-ba {
-    top: 0;
+    position: absolute;
+    top: 40%;
 }
 section.tg-sectionspace.tg-haslayout:first-child {
     margin-top: 25px;
@@ -71,6 +78,86 @@ span.fa.fa-star {
 ins#price {
     color: red;
 }
+.tg-innerbannercontent h1 {
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif !important;
+    line-height: 1;
+}
+h3.muangay {
+    margin-top: 25px;
+    margin-bottom: -10px;
+}
+.form-muangay input {
+    display: block;
+    width: 100%;
+    margin-bottom: 5px;
+}
+
+.form-muangay {
+    margin-top: 25px;
+}
+a.btn-quantity {
+    background: green;
+    margin-left: 8px;
+    padding: 5px 10px;
+    color: white;
+    border-radius: 3px;
+}
+.cart-show{
+    opacity: 1;
+    visibility: visible;
+    top:32px;
+}
+input.form-control.input-cart {
+    margin-top: 10px;
+}
+label.error {
+    color: red;
+    margin-left: 5px;
+}
+span.cart-null {
+    display: block;
+    margin-top: 18px;
+}
+.book-search{
+    position: absolute;
+    width: 100%;
+    left: 0;
+    z-index: 20;
+    display: none;
+}
+.book-search input{
+    position: absolute;
+    width: 100%;
+    left: 0px;
+    top: -12px;
+    padding: 0px 45px;
+}
+.book-search button{
+    position: absolute;
+    top: -9px;
+    right: 2px;
+    background: #6ba03600;
+    font-size: 31px;
+    color: #669833;
+    padding: 1px 5px;
+    border-radius: 3px;
+    border: 1px solid #6ba036;
+}
+.book-search a{
+    position: absolute;
+    top: -9px;
+    left: 2px;
+    background: #39a22e00;
+    font-size: 31px;
+    color: #669833;
+    z-index: 20;
+    padding: 1px 5px;
+    border-radius: 3px;
+    border: 1px solid #6ba036;
+}
+.owl-nav {
+    display: none;
+}
 @media(max-width:991px){
     .tg-homeslider .item{
         height: 508px;
@@ -79,6 +166,9 @@ ins#price {
         padding: 0px !important;
         overflow: visible;
     }
+    .tg-headervtwo .tg-logo{
+		padding:0 0 0px;
+	}
 }
 @media(min-width:768px){
     .dropdown.tg-themedropdown.tg-wishlistdropdown{
